Release 18.01.0 (pending)
==========================

SoapyLMS changes:
- Filter BW reported to match filtersCalibration

Other changes:
- Fix B channel only streaming
- Reduce SIMD flags when packaging for x86
- Fixed LMS7002M::GetPathRFE for LNAH case

Release 17.12.0 (2017-10-19)
==========================

SoapyLMS changes:
- Force MIMO alignment
- Add TBB frontend gain configuration
- Fix/adjust gain ranges

LMS API changes:
- Increased USB timeouts
- Updated FTDI library (LimeSDR-Mini on Windows)
- RF switch control for LimeSDR-Mini
- Updated setup/destruction of streams
- various bug fixes

LimeSuiteGUI changes:
- Update LimeSDR-Mini panel

Other changes:
- LimeSDR-USB v1.4 updated to r2.12 gateware
- LimeSDR-USB v1.4 updated to v4.0 firmware

Release 17.10.0 (2017-10-19)
==========================

SoapyLMS changes:
- Initial support for LimeSDR-Mini
- Disable calibration cache by default

LMS API changes:
- Initial support for LimeSDR-Mini

LimeSuiteGUI changes:
- Added scrollbars
- Fix multiple crashes that occured when board is not connected 
- Bring window to front when trying to open already opened window
- Some cosmetic GUI changes
- Added default config button to GUI

Other changes:
- LimeSDR v1.4 updated to r2.11 gateware

Release 17.09.1 (2017-09-21)
==========================

SoapyLMS changes:
- SoapyLMS7 caches stream enable and disables on close
- Fixed late packet reporting in SoapyLMS7 stream status

LMS API changes:
- Added simple GPIO example utilizing functions from LimeSuite.h
- Fixed WriteStream() end of burst flushing in fifo.h
- Fixed abs() overload compiler issue in lms7_device.cpp
- Removed private include in mcu_program/host_src/main.cpp
- Fixed error checking bug causing compilation error on MacOS in LMS_GetGaindB() and LMS_GetNormalizedGain() 

Other changes:
- LimeSDR v1.4 updated to r2.10 gateware

Release 17.09.0 (2017-09-01)
==========================

LimeSuite library changes: